<resources>
    <string name="pcapdroid_app_name" translatable="false">FreePCAPdroid</string>
    <string name="default_collector_ip" translatable="false">127.0.0.1</string>
    <string name="default_collector_port" translatable="false">1234</string>
    <string name="ip_and_port" translatable="false">%1$s:%2$d</string>
    <string name="ipv6_and_port" translatable="false">[%1$s]:%2$d</string>
    <string name="app_and_proto" translatable="false">%1$s (%2$s)</string>
    <string name="sni" translatable="false">SNI</string>
    <string name="url" translatable="false">URL</string>
    <string name="whois_lookup" translatable="false">WHOIS</string>
    <string name="installation_id" translatable="false">Installation ID</string>
    <string name="license_code" translatable="false">License code</string>
    <string name="root" translatable="false">root</string>
    <string name="app_license" translatable="false">PCAPdroid is distributed in the hope that it will be useful, but WITHOUT
        ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
        See the <a href='https://www.gnu.org/licenses/gpl-3.0-standalone.html'>GNU General Public License or later</a> for
        more details</string>
    <string name="opensource_licenses" translatable="false"><b>Open Source Licenses:</b><br />\n\n
        - zdtun: <a href='https://github.com/emanuele-f/zdtun/blob/master/COPYING'>LGPL-3.0</a>\n\n
        - nDPI: <a href='https://github.com/ntop/nDPI/blob/dev/COPYING'>LGPL-3.0</a>\n\n
        - CustomActivityOnCrash: <a href='https://github.com/Ereza/CustomActivityOnCrash/blob/master/LICENSE'>Apache-2.0</a>\n\n
        - Gson: <a href='https://github.com/google/gson/blob/master/LICENSE'>Apache-2.0</a>\n\n
        - Brotli decoder: <a href='https://github.com/google/brotli/blob/master/LICENSE'>MIT</a>\n\n
        - mitmproxy: <a href='https://github.com/mitmproxy/mitmproxy/blob/main/LICENSE'>MIT</a>\n\n
        - Chaquopy: <a href='https://github.com/chaquo/chaquopy/blob/master/LICENSE.txt'>MIT</a>\n\n
        - MaxMind DB Reader: <a href='https://github.com/maxmind/MaxMind-DB-Reader-java/blob/main/LICENSE'>Apache-2.0</a>\n\n
        - FlagKit: <a href='https://github.com/madebybowtie/FlagKit/blob/master/LICENSE'>MIT</a>\n\n
        - IP Geolocation by <a href='https://db-ip.com'>DB-IP</a>\n\n
        - AppIntro: <a href='https://github.com/AppIntro/AppIntro/blob/main/LICENSE'>Apache-2.0</a>\n\n
        - QrGenerator: <a href='https://github.com/androidmads/QRGenerator/blob/master/LICENSE.md'>MIT</a>\n\n
        - Font Awesome: <a href='https://fontawesome.com/license/free'>Licenses</a>\n\n
        - App icon by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>\n\n
        - SourceCodePro font: <a href='https://github.com/adobe-fonts/source-code-pro/blob/release/LICENSE.md'>OFL-1.1</a>\n\n
        </string>
    <string name="connections_csv_fields" translatable="false">IPProto,SrcIP,SrcPort,DstIp,DstPort,UID,App,Proto,Status,Info,BytesSent,BytesRcvd,PktsSent,PktsRcvd,FirstSeen,LastSeen</string>
    <string name="unlock_token" translatable="false">Unlock token</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="collector_info">UDP collector: %1$s:%2$d</string>
    <string name="http_server_status">HTTP server: http://%1$s:%2$d</string>
    <string name="rcvd_and_sent">%1$s received — %2$s sent</string>
    <string name="query">Query</string>
    <string name="host">Host</string>
    <string name="ready">Ready</string>
    <string name="about">About</string>
    <string name="status">Status</string>
    <string name="connections_view">Connections</string>
    <string name="no_connections">No connections</string>
    <string name="connection_details">Connection details</string>
    <string name="app">App</string>
    <string name="protocol">Protocol</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="packets">Packets</string>
    <string name="duration">Duration</string>
    <string name="http_server">HTTP server</string>
    <string name="udp_exporter">UDP exporter</string>
    <string name="no_dump">No dump</string>
    <string name="no_dump_info">Traffic will not be dumped</string>
    <string name="http_server_info">Start an HTTP server for the PCAP download</string>
    <string name="udp_exporter_info">Sends the PCAP to a remote UDP receiver</string>
    <string name="http_server_port">HTTP server port</string>
    <string name="receiver_ip_address">Collector IP address</string>
    <string name="receiver_port">Collector port</string>
    <string name="traffic_dump">Traffic dump</string>
    <string name="user_guide">User guide</string>
    <string name="open_telegram_group">Telegram group</string>
    <string name="source_code">Source code</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vpn_setup_failed">Could not set up the VPN. Ensure that Always-on VPN is disabled</string>
    <string name="app_not_found">Could not find the "%1$s" app</string>
    <string name="stats">Stats</string>
    <string name="active_connections">Active connections</string>
    <string name="dropped_connections">Dropped connections</string>
    <string name="tot_connections">Total connections</string>
    <string name="open_sockets">Open sockets</string>
    <string name="bytes_sent">Bytes sent</string>
    <string name="bytes_rcvd">Bytes received</string>
    <string name="ipv6_bytes_sent">IPv6 bytes sent</string>
    <string name="ipv6_bytes_rcvd">IPv6 bytes received</string>
    <string name="apps">Apps</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="save_to_file">Save to file</string>
    <string name="other_prefs">Other</string>
    <string name="app_language">App language</string>
    <string name="app_theme">Theme</string>
    <string name="socks5_proxy">SOCKS5</string>
    <string name="socks5_redirection">SOCKS5 redirection</string>
    <string name="socks5_summary">Configure the redirection to a SOCKS5 proxy</string>
    <string name="enable_socks5_proxy_summary">Redirect all the TCP connections to a SOCKS5 proxy</string>
    <string name="socks5_auth">SOCKS5 authentication</string>
    <string name="socks5_auth_summary">Authenticate to the proxy via username and password</string>
    <string name="proxy_host">Proxy host</string>
    <string name="proxy_port">Proxy port</string>
    <string name="root_capture">Capture as root</string>
    <string name="root_capture_summary">Allows PCAPdroid to run with other VPN apps</string>
    <string name="donate">Donate</string>
    <string name="app_log">Log</string>
    <string name="search">Search…</string>
    <string name="capture_prefs">Capture</string>
    <string name="pcapdroid_trailer">PCAPdroid trailer</string>
    <string name="pcapdroid_trailer_summary">A trailer containing additional metadata (such as the app name) will be added to the dumped packets</string>
    <string name="trailer_how_to">How to display the trailer data in Wireshark</string>
    <string name="capture_interface">Capture interface</string>
    <string name="edit_filter">Edit filter</string>
    <string name="security">Security</string>
    <string name="malware_detection">Malware detection</string>
    <string name="malware_detection_summary">Detect connections to known malicious hosts via third-party blacklists</string>
    <string name="hint">Hint</string>
    <string name="control_permissions">Control permissions</string>
    <string name="control_permissions_summary">Check which apps are allowed to control the PCAPdroid capture</string>
    <string name="country">Country</string>
    <string name="start_at_boot">Start at boot</string>
    <string name="start_at_boot_summary">Auto-starts capture after boot</string>
    <string name="malware_detection_learn_more">Learn more about the malware detection feature</string>
    <string name="firewall">Firewall</string>
    <string name="valid">Valid</string>
    <string name="loading">Loading…</string>
    <string name="tls_decryption">TLS decryption</string>
    <string name="tls_decryption_summary">Decrypt the SSL/TLS traffic by performing mitm. This may now work with some apps, check out the user guide</string>
    <string name="traffic_inspection">Traffic inspection</string>
    <string name="mitm_setup_wizard">Mitm setup wizard</string>
    <string name="export_action">Export</string>
    <string name="full_payload">Full payload</string>
    <string name="full_payload_summary">Show the full connections payload (e.g. the full HTTP request and response). This requires a lot of memory, don\'t use in the long run</string>
    <string name="geolocation">Geolocation</string>
    <string name="geolocation_summary">Show country and ASN info by performing offline lookups</string>
    <string name="geo_db_not_found">Database not found. Geolocation is disabled</string>
    <string name="database">Database</string>
    <string name="geo_db_download">Tap to download the latest database. New databases are available monthly</string>
    <string name="geo_db_delete">Tap to delete the database and save space</string>
    <string name="download">Download</string>
    <string name="import_action">Import</string>
    <string name="block_quick">Block QUIC</string>
    <string name="block_private_dns">Block private DNS</string>
    <string name="block_private_dns_summary">Detect and possibly block private DNS to inspect DNS traffic. Disabling this can hinder traffic analysis</string>
    <string name="ip_mode">VPN IP addresses</string>
    <string name="vpn_exemptions">VPN Exemptions</string>
    <string name="vpn_exemptions_summary">Exempt some apps from the VPN connection. Their traffic will not be monitored</string>
    <string name="block_new_apps">Block newly installed apps</string>
    <string name="access_paid_features_msg">Check out <a href='%1$s'>the user guide</a> to learn how to access the paid features</string>
    <string name="mitm_wizard_description">Configure the device for the TLS decryption</string>
    <string name="mitmproxy_opts">Additional mitmproxy options</string>
    <string name="mitmproxy_opts_description">Provide additional options for mitmproxy</string>
    <string name="whitelist_mode">Whitelist mode</string>
    <string name="port_mapping">Port mapping</string>
    <string name="port_mapping_summary">Configure port mapping rules to redirect connections to a different host or port</string>
    <string name="add_action">Add</string>
    <string name="ip_address">IP address</string>
    <string name="dns_servers">DNS servers</string>
    <string name="dns_servers_summary">Configure the DNS servers to use during the capture</string>
    <string name="pcapng_format">Pcapng format</string>
    <string name="pcapng_format_summary">Dump packets in the pcapng dump format, which allows embedding TLS decryption secrets</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="activate_via_qr_code">Activate via QR code</string>
    <string name="qr_info_text">Install PCAPdroid from Google Play and scan this QR code</string>
    <string name="decryption_rules">Decryption rules</string>
    <string name="open_pcap_file">Open PCAP file…</string>
    <string name="dnscrypt_how_to">How to use DoH / DNSCrypt with PCAPdroid</string>
    <string name="restart_on_disconnection">Restart on disconnection</string>
    <string name="restart_on_disconnection_summary">Automatically restart the capture after being stopped by other VPN apps</string>
</resources>