<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_app">
        <item
            android:id="@+id/item_apps"
            android:icon="@drawable/ic_apps"
            android:title="@string/apps" />
        <item
            android:id="@+id/action_stats"
            android:icon="@drawable/ic_stacked_bar_chart"
            android:title="@string/stats" />
        <item
            android:id="@+id/tls_decryption"
            android:icon="@drawable/ic_lock_open_alt"
            android:title="@string/decryption_rules" />
        <item
            android:id="@+id/firewall"
            android:icon="@drawable/ic_shield"
            android:title="@string/firewall" />
        <item
            android:id="@+id/malware_detection"
            android:icon="@drawable/ic_bug"
            android:title="@string/malware_detection" />
        <item
            android:id="@+id/open_log"
            android:icon="@drawable/ic_text_snippet"
            android:title="@string/app_log" />
    </group>
    <group android:id="@+id/group_social">
        <item
            android:id="@+id/action_open_user_guide"
            android:icon="@drawable/ic_book"
            android:title="@string/user_guide" />
        <item
            android:id="@+id/action_donate"
            android:icon="@drawable/ic_money"
            android:title="@string/donate" />
        <item
            android:id="@+id/action_share_app"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/action_open_telegram"
            android:icon="@drawable/ic_telegram"
            android:title="@string/open_telegram_group" />
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_copyright"
            android:title="@string/about" />
    </group>
</menu>
