<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/show_hint"
        android:icon="@drawable/ic_help"
        android:orderInCategory="10"
        android:title="@string/hint"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_add"
        android:orderInCategory="15"
        android:title="@string/add_action"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/add_app"
                android:title="@string/app"
                android:visible="false" />
            <item
                android:id="@+id/add_host"
                android:title="@string/host"
                android:visible="false" />
            <item
                android:id="@+id/add_ip"
                android:title="@string/ip_address"
                android:visible="false" />
            <item
                android:id="@+id/add_proto"
                android:title="@string/protocol"
                android:visible="false" />
            <item
                android:id="@+id/add_country"
                android:title="@string/country"
                android:visible="false" />
        </menu>
    </item>

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_file_export"
        android:orderInCategory="18"
        android:title="@string/export_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_file_import"
        android:orderInCategory="19"
        android:title="@string/import_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/copy_to_clipboard"
        android:icon="@drawable/ic_content_copy"
        android:orderInCategory="20"
        android:title="@string/copy_to_clipboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="30"
        android:title="@string/share"
        app:showAsAction="never" />
</menu>
