<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toggle_btn"
        android:orderInCategory="10"
        android:title=""
        app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
        app:showAsAction="always" />

    <item
        android:id="@+id/user_guide"
        android:icon="@drawable/ic_book"
        android:orderInCategory="20"
        android:title="@string/user_guide"
        app:showAsAction="never" />

    <item
        android:id="@+id/whitelist_mode"
        android:checkable="true"
        android:orderInCategory="25"
        android:title="@string/whitelist_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/block_new_apps"
        android:checkable="true"
        android:orderInCategory="30"
        android:title="@string/block_new_apps"
        app:showAsAction="never" />
</menu>
