<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- NOTE: "always|collapseActionView" must be set to prevent the search button from
         disappearing and to avoid hiding the other elements. -->
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="15"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/edit_filter"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="20"
        android:title="@string/edit_filter"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="30"
        android:title="@string/save_to_file"
        app:showAsAction="never" />
</menu>
